fix: fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,8 @@ body {
   width: 100vw;
   position: relative;
   background-image: url("../images/bg.jpg");
-  display: flex;
-  align-items: center;
   touch-action: none;
+  padding: 168px;
 }
 
 .container {
